# benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README  README.md  api.py  dataset_code_review.json  dataset_logic_puzzles.json  dataset_pure_math.json  docker-compose.yml  model_responses.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_project.sh  start_local.sh
.github/workflows/: tests.yml
__tests__/: e2e.test.js
__tests__/fixtures/: math_sample.json
backend/: api.py  requirements.txt
backend/core/: __init__.py  app.py  config.py  database.py  engine.py  generator.py  logger.py  tasks.py  validators.py
backend/tests/: test_engine.py  test_validators.py
backend/tests/integration/: test_database.py
core/: config.py  data_quality.py  engine.py  evaluators.py  generator.py  resilience.py
data/: models.json  results.json  synthetic_input.json
datasets/: 2.json  3.json  aviation_maintenance_faults.json  custom_dataset.json  data.csv
docs/: QUICK_START.md
frontend/: package-lock.json  package.json
frontend/src/data/: modelRepository.js
frontend/src/logic/: datasetParser.js  rankingEngine.js
frontend/src/routes/: rankings.js
frontend/web/: app.js  server.js
frontend/web/static/: script.js
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: benchmark.json
monitoring/grafana/provisioning/datasources/: prometheus.json
scripts/: demo.sh  etl_pipeline.py
src/data/: modelRepository.js
src/logic/: benchmarkMapper.js  datasetAnalyzer.js  datasetEvaluator.js  datasetRecommendationEngine.js  llmDatasetAnalyzer.js
src/routes/: rankings.js
tests/: conftest.py  test_engine.py
tools/: md_to_pdf.py  md_to_pretty_pdf.py
web/: server.js
web/static/: script.js  style.css  table-dark-mode.css
web/templates/: index.html
