[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-benchmark"
version = "1.0.0"
description = "Production-grade LLM benchmarking platform with async execution, database persistence, and comprehensive observability"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Benchmark Team", email = "team@benchmark.local"}
]

keywords = ["llm", "benchmark", "async", "database", "monitoring"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7.0",
    "aiohttp>=3.9.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.18.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

monitoring = [
    "prometheus-client>=0.18.0",
    "elasticsearch>=8.10.0",
    "elastic-apm>=6.15.0",
]

orchestration = [
    "apache-airflow>=2.7.0",
]

ml = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/benchmark/llm-benchmark"
Documentation = "https://github.com/benchmark/llm-benchmark#readme"
Repository = "https://github.com/benchmark/llm-benchmark.git"
Issues = "https://github.com/benchmark/llm-benchmark/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "src*"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_glob = [".venv/*", "venv/*"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
exclude = ["venv/", ".venv/", "build/", "dist/"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
branch = true
source = ["core", "src"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "invalid-name",
    "duplicate-code",
]

[tool.pylint.MASTER]
load-plugins = []
ignore-patterns = ["test_.*?py"]

[tool.pylint.DESIGN]
max-locals = 15
max-branches = 12
max-attributes = 7
